assets/css/style.css
body{
  background-color: rgb(71, 71, 71);
  display:block;
    color: aliceblue;
}
header {
text-align: center;
font-size: xx-large;
}
.hide {
  display: none;
}

#startGame {
    align-content: center;
}
.clue {
/* background-color: yellow; */
/* min-height: 300px; */
width: 30%;
display: inline-flex;
margin: 10px;
color: black;
}
h2 {
    text-align: center;
}
 li {
  text-align: left;
 }
#startImage {
  max-height: 30vh;
  min-height: 200px;
}
.flip-card,   .flip-card-clicked  {
    background-color: transparent;
    width: 100%;
    height: 100%;
    perspective: 1000px;
  }
  
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  }
  
  /* .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  } */
  .flip-card-clicked .flip-card-inner {
    transform: rotateY(180deg);
  }
  
  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
  }
  
  .flip-card-front {
    background-color:rgb(71,71,71);
    color: black;
  }
  
  .flip-card-back {
    background-color: goldenrod;
    color: white;
    transform: rotateY(180deg);
    overflow: hidden;
  }

#card-container{
    width:90%;margin:0 auto;
    display:flex;
    flex-wrap: wrap;
    background-color:  rgb(203, 119, 17);
}

#cropped-img-frame {
  width: 130px; 
  height: 130px; 
  display:block;
  margin:0 auto;
  background-position:center;
  background-size:800px;
}    
    


.clue{width:180px;height:200px;margin:5px;}

.img-blur .flip-card-back img{width:100%;filter:blur(10px)}

.container{display:flex;width:90%;margin:10px auto;justify-content: space-between;}
#img-container{
    width:38%;
    display:flex;
    flex-direction: column;
    align-items: flex-start;}
 #img-container span{overflow:hidden;
    border:1px solid black;
    border-radius: 10px;}   
#card-container2{
    width:58%;margin:0 auto;
    display:flex;
    flex-wrap: wrap;
    background-color: rgb(203, 119, 17);
}
#img-container img{width:100%;filter:blur(30px)} 
#card-container2 .clue{width:180px;height:180px;}

#info h1{
  font-size:1.6em;
}
#youtube-info{margin-bottom:6px;}
#youtube-info section{display:flex;padding:4px 0;border-bottom:1px solid black;}
#youtube-info section a{margin-right:10px;}
#youtube-info article{
  width:80%;
  padding:3px 0 0 0;
}
#youtube-info article h3{
  text-align:left;
  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin:0 0 3px 0;
  font-weight:bold;

  text-decoration: none;
  line-height: 1.2;
  font-size:1.3em;
}
#youtube-info article p{
  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  line-height: 1.2;
  font-size:1.1em;
}

